// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders Choice with a heading without crashing 1`] = `
<div
  className="formGroup"
  id="test-container"
>
  
  <div
    className="control-label controlLabel "
  >
    heading
  </div>
  <div
    className="choiceContainer false"
    data-options-per-row={null}
  >
    <div
      className="choiceButton"
    >
      <input
        checked={false}
        id="testopA"
        name="test"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        required={false}
        type="radio"
        value="opA"
      />
      <label
        className=""
        disabled={false}
        htmlFor="testopA"
        id={0}
      >
        Option A
      </label>
    </div>
    <div
      className="choiceButton"
    >
      <input
        checked={false}
        id="testopB"
        name="test"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        required={false}
        type="radio"
        value="opB"
      />
      <label
        className=""
        disabled={false}
        htmlFor="testopB"
        id={1}
      >
        Option B
      </label>
    </div>
    <div
      className="choiceButton"
    >
      <input
        checked={false}
        id="testopC"
        name="test"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        required={false}
        type="radio"
        value="opC"
      />
      <label
        className=""
        disabled={false}
        htmlFor="testopC"
        id={2}
      >
        Option C
      </label>
    </div>
  </div>
</div>
`;

exports[`Renders Choice with a label without crashing 1`] = `
<div
  className="formGroup"
  id="test-container"
>
  
  <div
    className="control-label controlLabel "
  >
    heading
  </div>
  <div
    className="choiceContainer false"
    data-options-per-row={null}
  >
    <div
      className="choiceButton"
    >
      <input
        checked={false}
        id="testopA"
        name="test"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        required={false}
        type="radio"
        value="opA"
      />
      <label
        className=""
        disabled={false}
        htmlFor="testopA"
        id={0}
      >
        Option A
      </label>
    </div>
    <div
      className="choiceButton"
    >
      <input
        checked={false}
        id="testopB"
        name="test"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        required={false}
        type="radio"
        value="opB"
      />
      <label
        className=""
        disabled={false}
        htmlFor="testopB"
        id={1}
      >
        Option B
      </label>
    </div>
    <div
      className="choiceButton"
    >
      <input
        checked={false}
        id="testopC"
        name="test"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        required={false}
        type="radio"
        value="opC"
      />
      <label
        className=""
        disabled={false}
        htmlFor="testopC"
        id={2}
      >
        Option C
      </label>
    </div>
  </div>
</div>
`;

exports[`Renders Choice with radio buttons without crashing 1`] = `
<div
  className="formGroup"
  id="test-container"
>
  
  <div
    className="choiceContainer false"
    data-options-per-row={null}
  >
    <div
      className="choiceButton"
    >
      <input
        checked={false}
        id="testopA"
        name="test"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        required={false}
        type="radio"
        value="opA"
      />
      <label
        className=""
        disabled={false}
        htmlFor="testopA"
        id={0}
      >
        Option A
      </label>
    </div>
    <div
      className="choiceButton"
    >
      <input
        checked={false}
        id="testopB"
        name="test"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        required={false}
        type="radio"
        value="opB"
      />
      <label
        className=""
        disabled={false}
        htmlFor="testopB"
        id={1}
      >
        Option B
      </label>
    </div>
    <div
      className="choiceButton"
    >
      <input
        checked={false}
        id="testopC"
        name="test"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        required={false}
        type="radio"
        value="opC"
      />
      <label
        className=""
        disabled={false}
        htmlFor="testopC"
        id={2}
      >
        Option C
      </label>
    </div>
  </div>
</div>
`;

exports[`Renders a Choice with a disabled option without crashing 1`] = `
<div
  className="formGroup"
  id="test-container"
>
  
  <div
    className="choiceContainer choiceFlexible"
    data-options-per-row={null}
  >
    <div
      className="choiceButton"
    >
      <input
        checked={false}
        id="testopA"
        name="test"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        required={false}
        type="radio"
        value="opA"
      />
      <label
        className=""
        disabled={false}
        htmlFor="testopA"
        id={0}
      >
        Option A
      </label>
    </div>
    <div
      className="choiceButton"
    >
      <input
        checked={false}
        id="testopB"
        name="test"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        required={false}
        type="radio"
        value="opB"
      />
      <label
        className=""
        disabled={false}
        htmlFor="testopB"
        id={1}
      >
        Option B
      </label>
    </div>
    <div
      className="choiceButton"
    >
      <input
        checked={false}
        id="testopC"
        name="test"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        required={false}
        type="radio"
        value="opC"
      />
      <label
        className=""
        disabled={false}
        htmlFor="testopC"
        id={2}
      >
        Option C
      </label>
    </div>
    <div
      className="choiceButton"
    >
      <input
        checked={false}
        id="testopD"
        name="test"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        required={false}
        type="radio"
        value="opD"
      />
      <label
        className=""
        disabled={true}
        htmlFor="testopD"
        id={3}
      >
        Option D
      </label>
    </div>
  </div>
</div>
`;

exports[`Renders a Choice with checked from route 1`] = `
<div
  className="formGroup"
  id="test-container"
>
  
  <div
    className="choiceContainer false"
    data-options-per-row={null}
  >
    <div
      className="choiceButton"
    >
      <input
        checked={false}
        id="testopA"
        name="test"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        required={false}
        type="radio"
        value="opA"
      />
      <label
        className=""
        disabled={false}
        htmlFor="testopA"
        id={0}
      >
        Option A
      </label>
    </div>
    <div
      className="choiceButton"
    >
      <input
        checked={false}
        id="testopB"
        name="test"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        required={false}
        type="radio"
        value="opB"
      />
      <label
        className=""
        disabled={false}
        htmlFor="testopB"
        id={1}
      >
        Option B
      </label>
    </div>
    <div
      className="choiceButton"
    >
      <input
        checked={true}
        id="testopC"
        name="test"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        required={false}
        type="radio"
        value="opC"
      />
      <label
        className=""
        disabled={false}
        htmlFor="testopC"
        id={2}
      >
        Option C
      </label>
    </div>
  </div>
</div>
`;

exports[`Renders a Choice with custom style 1`] = `
<div
  className="formGroup"
  id="test-container"
>
  
  <div
    className="choiceContainer false"
    data-options-per-row={null}
  >
    <div
      className="choiceButton"
    >
      <input
        checked={false}
        id="testopA"
        name="test"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        required={false}
        type="radio"
        value="opA"
      />
      <label
        className="customThemeClass"
        disabled={false}
        htmlFor="testopA"
        id={0}
      >
        Option A
      </label>
    </div>
    <div
      className="choiceButton"
    >
      <input
        checked={false}
        id="testopB"
        name="test"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        required={false}
        type="radio"
        value="opB"
      />
      <label
        className="customThemeClass"
        disabled={false}
        htmlFor="testopB"
        id={1}
      >
        Option B
      </label>
    </div>
    <div
      className="choiceButton"
    >
      <input
        checked={false}
        id="testopC"
        name="test"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        required={false}
        type="radio"
        value="opC"
      />
      <label
        className="customThemeClass"
        disabled={false}
        htmlFor="testopC"
        id={2}
      >
        Option C
      </label>
    </div>
  </div>
</div>
`;

exports[`Renders a Choice with custom style disabled 1`] = `
<div
  className="formGroup"
  id="test-container"
>
  
  <div
    className="choiceContainer false"
    data-options-per-row={null}
  >
    <div
      className="choiceButton"
    >
      <input
        checked={false}
        id="testopA"
        name="test"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        required={false}
        type="radio"
        value="opA"
      />
      <label
        className="customThemeClass"
        disabled={true}
        htmlFor="testopA"
        id={0}
      >
        Option A
      </label>
    </div>
    <div
      className="choiceButton"
    >
      <input
        checked={false}
        id="testopB"
        name="test"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        required={false}
        type="radio"
        value="opB"
      />
      <label
        className="customThemeClass"
        disabled={true}
        htmlFor="testopB"
        id={1}
      >
        Option B
      </label>
    </div>
    <div
      className="choiceButton"
    >
      <input
        checked={false}
        id="testopC"
        name="test"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        required={false}
        type="radio"
        value="opC"
      />
      <label
        className="customThemeClass"
        disabled={true}
        htmlFor="testopC"
        id={2}
      >
        Option C
      </label>
    </div>
  </div>
</div>
`;

exports[`Renders a Choice with default checked without crashing 1`] = `
<div
  className="formGroup"
  id="test-container"
>
  
  <div
    className="choiceContainer false"
    data-options-per-row={null}
  >
    <div
      className="choiceButton"
    >
      <input
        checked={false}
        id="testopA"
        name="test"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        required={false}
        type="radio"
        value="opA"
      />
      <label
        className=""
        disabled={false}
        htmlFor="testopA"
        id={0}
      >
        Option A
      </label>
    </div>
    <div
      className="choiceButton"
    >
      <input
        checked={true}
        id="testopB"
        name="test"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        required={false}
        type="radio"
        value="opB"
      />
      <label
        className=""
        disabled={false}
        htmlFor="testopB"
        id={1}
      >
        Option B
      </label>
    </div>
    <div
      className="choiceButton"
    >
      <input
        checked={false}
        id="testopC"
        name="test"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        required={false}
        type="radio"
        value="opC"
      />
      <label
        className=""
        disabled={false}
        htmlFor="testopC"
        id={2}
      >
        Option C
      </label>
    </div>
  </div>
</div>
`;

exports[`Renders a Choice with no default checked from route if it is not an option 1`] = `
<div
  className="formGroup"
  id="test-container"
>
  
  <div
    className="choiceContainer false"
    data-options-per-row={null}
  >
    <div
      className="choiceButton"
    >
      <input
        checked={false}
        id="testopA"
        name="test"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        required={false}
        type="radio"
        value="opA"
      />
      <label
        className=""
        disabled={false}
        htmlFor="testopA"
        id={0}
      >
        Option A
      </label>
    </div>
    <div
      className="choiceButton"
    >
      <input
        checked={false}
        id="testopB"
        name="test"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        required={false}
        type="radio"
        value="opB"
      />
      <label
        className=""
        disabled={false}
        htmlFor="testopB"
        id={1}
      >
        Option B
      </label>
    </div>
    <div
      className="choiceButton"
    >
      <input
        checked={false}
        id="testopC"
        name="test"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        required={false}
        type="radio"
        value="opC"
      />
      <label
        className=""
        disabled={false}
        htmlFor="testopC"
        id={2}
      >
        Option C
      </label>
    </div>
  </div>
</div>
`;

exports[`Renders a Choice with no default checked from route if it is the other name 1`] = `
<div
  className="formGroup"
  id="test-container"
>
  
  <div
    className="choiceContainer false"
    data-options-per-row={null}
  >
    <div
      className="choiceButton"
    >
      <input
        checked={false}
        id="testopA"
        name="test"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        required={false}
        type="radio"
        value="opA"
      />
      <label
        className=""
        disabled={false}
        htmlFor="testopA"
        id={0}
      >
        Option A
      </label>
    </div>
    <div
      className="choiceButton"
    >
      <input
        checked={false}
        id="testopB"
        name="test"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        required={false}
        type="radio"
        value="opB"
      />
      <label
        className=""
        disabled={false}
        htmlFor="testopB"
        id={1}
      >
        Option B
      </label>
    </div>
    <div
      className="choiceButton"
    >
      <input
        checked={false}
        id="testopC"
        name="test"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        required={false}
        type="radio"
        value="opC"
      />
      <label
        className=""
        disabled={false}
        htmlFor="testopC"
        id={2}
      >
        Option C
      </label>
    </div>
  </div>
</div>
`;

exports[`Renders a Choice with no default checked if it's not an option 1`] = `
<div
  className="formGroup"
  id="test-container"
>
  
  <div
    className="choiceContainer false"
    data-options-per-row={null}
  >
    <div
      className="choiceButton"
    >
      <input
        checked={false}
        id="testopA"
        name="test"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        required={false}
        type="radio"
        value="opA"
      />
      <label
        className=""
        disabled={false}
        htmlFor="testopA"
        id={0}
      >
        Option A
      </label>
    </div>
    <div
      className="choiceButton"
    >
      <input
        checked={false}
        id="testopB"
        name="test"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        required={false}
        type="radio"
        value="opB"
      />
      <label
        className=""
        disabled={false}
        htmlFor="testopB"
        id={1}
      >
        Option B
      </label>
    </div>
    <div
      className="choiceButton"
    >
      <input
        checked={false}
        id="testopC"
        name="test"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        required={false}
        type="radio"
        value="opC"
      />
      <label
        className=""
        disabled={false}
        htmlFor="testopC"
        id={2}
      >
        Option C
      </label>
    </div>
  </div>
</div>
`;

exports[`Renders a Choice with optionsPerRow set without crashing 1`] = `
<div
  className="formGroup"
  id="test-container"
>
  
  <div
    className="choiceContainer false"
    data-options-per-row="3"
  >
    <div
      className="choiceButton"
    >
      <input
        checked={false}
        id="testopA"
        name="test"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        required={false}
        type="radio"
        value="opA"
      />
      <label
        className=""
        disabled={false}
        htmlFor="testopA"
        id={0}
      >
        Option A
      </label>
    </div>
    <div
      className="choiceButton"
    >
      <input
        checked={false}
        id="testopB"
        name="test"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        required={false}
        type="radio"
        value="opB"
      />
      <label
        className=""
        disabled={false}
        htmlFor="testopB"
        id={1}
      >
        Option B
      </label>
    </div>
    <div
      className="choiceButton"
    >
      <input
        checked={false}
        id="testopC"
        name="test"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        required={false}
        type="radio"
        value="opC"
      />
      <label
        className=""
        disabled={false}
        htmlFor="testopC"
        id={2}
      >
        Option C
      </label>
    </div>
  </div>
</div>
`;

exports[`Renders a disabled Choice without crashing 1`] = `
<div
  className="formGroup"
  id="test-container"
>
  
  <div
    className="choiceContainer false"
    data-options-per-row={null}
  >
    <div
      className="choiceButton"
    >
      <input
        checked={false}
        id="testopA"
        name="test"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        required={false}
        type="radio"
        value="opA"
      />
      <label
        className=""
        disabled={true}
        htmlFor="testopA"
        id={0}
      >
        Option A
      </label>
    </div>
    <div
      className="choiceButton"
    >
      <input
        checked={false}
        id="testopB"
        name="test"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        required={false}
        type="radio"
        value="opB"
      />
      <label
        className=""
        disabled={true}
        htmlFor="testopB"
        id={1}
      >
        Option B
      </label>
    </div>
    <div
      className="choiceButton"
    >
      <input
        checked={false}
        id="testopC"
        name="test"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        required={false}
        type="radio"
        value="opC"
      />
      <label
        className=""
        disabled={true}
        htmlFor="testopC"
        id={2}
      >
        Option C
      </label>
    </div>
  </div>
</div>
`;

exports[`Renders an error if errors prop is set 1`] = `
<Choice
  checked="opB"
  customTheme=""
  disabled={false}
  error="Test"
  errorSubInfo="SubInfo"
  heading={null}
  headingStyle="control-label"
  isRequired={false}
  label={null}
  labelHidden={false}
  mobileSingleCol={false}
  name="test"
  onBlur={[Function]}
  onChange={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  options={
    Array [
      Object {
        "id": "opA",
        "label": "Option A",
        "value": "opA",
      },
      Object {
        "id": "opB",
        "label": "Option B",
        "value": "opB",
      },
      Object {
        "id": "opC",
        "label": "Option C",
        "value": "opC",
      },
    ]
  }
  optionsPerRow={null}
  query={Object {}}
  reference={[Function]}
  requiredLabel=""
>
  <div
    className="formGroup"
    id="test-container"
  >
    <div
      className="choiceContainer false"
      data-options-per-row={null}
    >
      <div
        className="choiceButton"
        key="opA"
      >
        <input
          checked={false}
          id="testopA"
          name="test"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          required={false}
          type="radio"
          value="opA"
        />
        <label
          className=""
          disabled={false}
          htmlFor="testopA"
          id={0}
        >
          Option A
        </label>
      </div>
      <div
        className="choiceButton"
        key="opB"
      >
        <input
          checked={true}
          id="testopB"
          name="test"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          required={false}
          type="radio"
          value="opB"
        />
        <label
          className=""
          disabled={false}
          htmlFor="testopB"
          id={1}
        >
          Option B
        </label>
      </div>
      <div
        className="choiceButton"
        key="opC"
      >
        <input
          checked={false}
          id="testopC"
          name="test"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          required={false}
          type="radio"
          value="opC"
        />
        <label
          className=""
          disabled={false}
          htmlFor="testopC"
          id={2}
        >
          Option C
        </label>
      </div>
    </div>
    <Error
      id={null}
      info="Test"
      subInfo="SubInfo"
    >
      <span
        className="errorContainer"
        id={null}
      >
        <strong
          className="errorInfo"
        >
          Test
        </strong>
        SubInfo
      </span>
    </Error>
  </div>
</Choice>
`;
